Page and README improvements
Some text corrections and minor page interface improvements.

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -51,7 +51,7 @@ a.btn:nth-child(4) {
 }
 
 a.btn:nth-child(4):hover {
-    background-color: #9280ffe6;
+    background-color: #FF78BCe6;
 }
 
 @media screen and (min-width: 64em){
@@ -98,7 +98,7 @@ body {
 
 ::selection {
     color: white;
-    background: #f94e98;
+    background: #FF78BC;
 }
 
 img:nth-child(1) {
